@@ -2,17 +2,17 @@
  * Copyright (C) 2005-2017  FeatureIDE team, University of Magdeburg, Germany
  *
  * This file is part of FeatureIDE.
- * 
+ *
  * FeatureIDE is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
+ *
  * FeatureIDE is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Lesser General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public License
  * along with FeatureIDE.  If not, see <http://www.gnu.org/licenses/>.
  *
@@ -44,12 +44,13 @@ import de.ovgu.featureide.fm.core.job.monitor.IMonitor;
 
 /**
  * Finds certain solutions of propositional formulas.
- * 
+ *
  * @author Sebastian Krieter
  */
 public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<String>>> {
 
 	public static class Configuration {
+
 		private static final double minBackJumpingDelta = 0.0;
 
 		private IConstr blockingClauseConstraint = null;
@@ -177,7 +178,7 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 	public PairWiseConfigurationGenerator(SatInstance satInstance, int maxNumber) {
 		super(satInstance);
 		this.maxNumber = maxNumber;
-		this.numVariables = this.solver.getSatInstance().getNumberOfVariables();
+		numVariables = solver.getSatInstance().getNumberOfVariables();
 	}
 
 	@Override
@@ -193,7 +194,7 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 		solver.initSolutionList(Math.min(solver.getSatInstance().getNumberOfVariables(), ISatSolver.MAX_SOLUTION_BUFFER));
 
 		findInvalid();
-		IVecInt orgBackbone = solver.getAssignment();
+		final IVecInt orgBackbone = solver.getAssignment();
 		final int featureCount = solver.getSatInstance().getNumberOfVariables();
 
 		final int numberOfFixedFeatures = orgBackbone.size();
@@ -237,7 +238,7 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 
 			countLoops = featureIndexArray.length;
 			int prio = 0;
-			for (FeatureIndex featureIndex : featureIndexArray) {
+			for (final FeatureIndex featureIndex : featureIndexArray) {
 				featureIndex.setPriority(prio++);
 			}
 			Arrays.sort(featureIndexArray);
@@ -251,9 +252,9 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 				bLoop: for (int y = 0; y < x; y++) {
 					final FeatureIndex featureIndexB = featureIndexArray[y];
 					final int b = featureIndexB.getIndex();
-					final int index = a * numVariables + b;
+					final int index = (a * numVariables) + b;
 					final byte curCombo = (combinations2[index]);
-					if (curCombo == 15 || featuresUsed[b]) {
+					if ((curCombo == 15) || featuresUsed[b]) {
 						continue;
 					}
 
@@ -297,7 +298,7 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 	public List<List<String>> getConfigurations() {
 		clearTempConfigurations();
 		final ArrayList<List<String>> ret = new ArrayList<>(finalConfigurationList.size());
-		for (Configuration model : finalConfigurationList) {
+		for (final Configuration model : finalConfigurationList) {
 			ret.add(solver.getSatInstance().convertToString(model.getModel()));
 		}
 		return ret;
@@ -425,8 +426,8 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 
 		final int indexX = Math.abs(mx0) - 1;
 		final int indexY = Math.abs(my0) - 1;
-		final int combinationIndexXY = indexX * numVariables + indexY;
-		final int combinationIndexYX = indexY * numVariables + indexX;
+		final int combinationIndexXY = (indexX * numVariables) + indexY;
+		final int combinationIndexYX = (indexY * numVariables) + indexX;
 
 		if (mx0 > 0) {
 			if (my0 > 0) {
@@ -453,8 +454,8 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 		if (indexX == indexY) {
 			return false;
 		}
-		final int combinationIndexXY = indexX * numVariables + indexY;
-		final int combinationIndexYX = indexY * numVariables + indexX;
+		final int combinationIndexXY = (indexX * numVariables) + indexY;
+		final int combinationIndexYX = (indexY * numVariables) + indexX;
 
 		final byte oldXY = combinations[combinationIndexXY];
 		final byte oldYX = combinations[combinationIndexYX];
@@ -477,7 +478,7 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 			}
 		}
 
-		return oldXY != combinations[combinationIndexXY] || oldYX != combinations[combinationIndexYX];
+		return (oldXY != combinations[combinationIndexXY]) || (oldYX != combinations[combinationIndexYX]);
 	}
 
 	protected void clearTempConfigurations() {
@@ -574,7 +575,7 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 			combinations = new byte[numVariables * numVariables];
 			combinations2 = new byte[numVariables * numVariables];
 
-			outer: for (Node clause : solver.getSatInstance().getCnf().getChildren()) {
+			outer: for (final Node clause : solver.getSatInstance().getCnf().getChildren()) {
 				final Node[] literals = clause.getChildren();
 				int childrenCount = literals.length;
 				for (int i = 0; i < childrenCount; i++) {
@@ -602,12 +603,12 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 						addRelation(-y, x);
 					}
 				}
-				for (int i = 0; i < childrenCount - 1; i++) {
+				for (int i = 0; i < (childrenCount - 1); i++) {
 					final int x = solver.getSatInstance().getVariable((Literal) literals[i]) - 1;
 					for (int j = i + 1; j < childrenCount; j++) {
 						final int y = solver.getSatInstance().getVariable((Literal) literals[j]) - 1;
-						combinations[x * numVariables + y] |= BIT_CHECK;
-						combinations[y * numVariables + x] |= BIT_CHECK;
+						combinations[(x * numVariables) + y] |= BIT_CHECK;
+						combinations[(y * numVariables) + x] |= BIT_CHECK;
 					}
 				}
 			}
@@ -618,12 +619,12 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 				incomplete = false;
 				for (int x1 = 0; x1 < model1Copy.length; x1++) {
 					for (int y1 = 0; y1 < model1Copy.length; y1++) {
-						final int combinationIndexX1Y1 = x1 * numVariables + y1;
+						final int combinationIndexX1Y1 = (x1 * numVariables) + y1;
 						if ((combinations[combinationIndexX1Y1] & BIT_CHECK) != 0) {
 							for (int x2 = 0; x2 < model1Copy.length; x2++) {
-								final int combinationIndexY1X2 = y1 * numVariables + x2;
+								final int combinationIndexY1X2 = (y1 * numVariables) + x2;
 								if ((combinations[combinationIndexY1X2] & BIT_CHECK) != 0) {
-									final int combinationIndexX1X2 = x1 * numVariables + x2;
+									final int combinationIndexX1X2 = (x1 * numVariables) + x2;
 									if ((combinations[combinationIndexX1X2] & BIT_CHECK) == 0) {
 										combinations[combinationIndexX1X2] |= BIT_CHECK;
 										incomplete = true;
@@ -700,8 +701,8 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 	protected int getLastCoverage() {
 		synchronized (tempConfigurationList) {
 			return (tempConfigurationList.isEmpty())
-					? ((finalConfigurationList.isEmpty()) ? 0 : finalConfigurationList.get(finalConfigurationList.size() - 1).getTotalCoverage())
-					: tempConfigurationList.getLast().getTotalCoverage();
+				? ((finalConfigurationList.isEmpty()) ? 0 : finalConfigurationList.get(finalConfigurationList.size() - 1).getTotalCoverage())
+				: tempConfigurationList.getLast().getTotalCoverage();
 		}
 	}
 
@@ -798,12 +799,12 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 
 		try {
 			config.setBlockingClauseConstraint(solver.getInternalSolver().addBlockingClause(new VecInt(SatInstance.negateModel(curModel))));
-		} catch (ContradictionException e) {
+		} catch (final ContradictionException e) {
 			return true;
 		}
 
 		// Statistic numbers
-		int absUncovered = printStatisticNumbers(config);
+		final int absUncovered = printStatisticNumbers(config);
 
 		finalCount = Math.max(finalCount, count - maxBackJumping);
 		if (absUncovered <= 0) {
@@ -814,20 +815,20 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 
 	@SuppressWarnings("unused")
 	protected void printCount() {
-		if (VERBOSE && --countLoops % 100 == 0) {
+		if (VERBOSE && ((--countLoops % 100) == 0)) {
 			System.out.println("\t" + (countLoops / 100));
 		}
 	}
 
 	protected int printStatisticNumbers(final Configuration config) {
-		int absUncovered = combinationCount - config.getTotalCoverage();
+		final int absUncovered = combinationCount - config.getTotalCoverage();
 		double relDelta = (double) (config.getDeltaCoverage()) / combinationCount;
 		double relTotal = (double) (config.getTotalCoverage()) / combinationCount;
 		relDelta = Math.floor(relDelta * 100000.0) / 1000.0;
 		relTotal = Math.floor(relTotal * 1000.0) / 10.0;
 		if (VERBOSE) {
 			System.out.println(count++ + ": " + config.getTotalCoverage() + "/" + combinationCount + " | " + relTotal + "% | left = " + absUncovered
-					+ " | new = " + config.getDeltaCoverage() + " | delta = " + relDelta);
+				+ " | new = " + config.getDeltaCoverage() + " | delta = " + relDelta);
 		}
 		return absUncovered;
 	}
@@ -839,8 +840,8 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 		final int sigA = (int) Math.signum(sa);
 		final int sigB = (int) Math.signum(sb);
 
-		if (varStatus[0] != -sigA && varStatus[1] != -sigB) {
-			if (varStatus[0] == sigA && varStatus[1] == sigB) {
+		if ((varStatus[0] != -sigA) && (varStatus[1] != -sigB)) {
+			if ((varStatus[0] == sigA) && (varStatus[1] == sigB)) {
 				fix(featuresUsed, a, b);
 				return true;
 			}
@@ -900,11 +901,11 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 		final boolean positive = mx1 > 0;
 		final byte compareB = (byte) (positive ? 1 : 2);
 
-		if (core[i] == 0 && (recArray[i] & compareB) == 0) {
+		if ((core[i] == 0) && ((recArray[i] & compareB) == 0)) {
 			recArray[i] |= compareB;
 
 			int[] xModel1 = null;
-			for (int[] solution : solver.getSolutionList()) {
+			for (final int[] solution : solver.getSolutionList()) {
 				if (mx1 == solution[i]) {
 					xModel1 = solution;
 					break;
@@ -921,10 +922,11 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 
 			inner1: for (int j = i + 1; j < xModel1.length; j++) {
 				final byte b = combinations[rowIndex + j];
-				if (core[j] == 0 && (b & BIT_CHECK) != 0 && ((positive && (b & BITS_POSITIVE_IMPLY) == 0) || (!positive && (b & BITS_NEGATIVE_IMPLY) == 0))) {
+				if ((core[j] == 0) && ((b & BIT_CHECK) != 0)
+					&& ((positive && ((b & BITS_POSITIVE_IMPLY) == 0)) || (!positive && ((b & BITS_NEGATIVE_IMPLY) == 0)))) {
 
 					final int my1 = xModel1[j];
-					for (int[] solution : solver.getSolutionList()) {
+					for (final int[] solution : solver.getSolutionList()) {
 						final int mxI = solution[i];
 						final int myI = solution[j];
 						if ((mx1 == mxI) && (my1 != myI)) {
@@ -933,11 +935,11 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 					}
 
 					solver.assignmentPush(-my1);
-					solver.setSelectionStrategy((c++ % 2 != 0) ? SelectionStrategy.POSITIVE : SelectionStrategy.NEGATIVE);
+					solver.setSelectionStrategy(((c++ % 2) != 0) ? SelectionStrategy.POSITIVE : SelectionStrategy.NEGATIVE);
 
 					switch (solver.isSatisfiable()) {
 					case FALSE:
-						for (int mx0 : parentStack) {
+						for (final int mx0 : parentStack) {
 							addRelation(mx0, my1);
 						}
 						parentStack.push(my1);
@@ -968,13 +970,13 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 		final boolean positive = mx1 > 0;
 		final byte compareB = (byte) (positive ? 1 : 2);
 
-		if (core[i] == 0 && (recArray[i] & compareB) == 0) {
+		if ((core[i] == 0) && ((recArray[i] & compareB) == 0)) {
 			recArray[i] |= compareB;
 
 			final int rowIndex = i * numVariables;
 
 			for (int j = 0; j < numVariables; j++) {
-				if (i != j && core[j] == 0) {
+				if ((i != j) && (core[j] == 0)) {
 					final byte b = combinations[rowIndex + j];
 					int my1 = 0;
 					if (positive) {
@@ -991,7 +993,7 @@ public class PairWiseConfigurationGenerator extends AbstractAnalysis<List<List<S
 						}
 					}
 					if (my1 != 0) {
-						for (int mx0 : parentStack) {
+						for (final int mx0 : parentStack) {
 							if (addRelation2(mx0, my1)) {
 								changed = true;
 							}
